--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "useTabs": true,
   "jsxSingleQuote": true,
   "singleQuote": true,
-  "semi": false
+  "semi": false,
+  "trailingComma": "none"
 }
